# keywords_analysis

./: .gitignore  0.1.8  3.6.0  Makefile  PYCHARM_SETUP.md  README.md  README_PIPELINE.md  R_PACKAGE_INSTALL_MANUAL.md  R_SCRIPT_ERROR_FIX.md  analyze_failed_files.md  analyze_keyword_lag.py  check_failed_reason.py  create_file_statistics.py  install_r_packages.R  pyproject.toml  requirements.txt  run_all.bat  run_all.ps1  run_filter_files.bat  run_filter_files.ps1  run_pipeline.bat  run_pipeline.ps1
anaconda/env/: environment.yml
config/: default.yaml
data/: failed_date_parsing.txt
data/exclude/: keywords.txt
data/filtered_data/meeting/: 2019-12-03_2019_12_03.txt  2019-12-16_2019_12_16_pcef.txt  2020-01-20_2020_01_20.txt  2020-01-28_2020_01_28.txt  2020-03-31_2020_03_31.txt  2020-04-09_2020_04_09.txt  2020-07-29_2020_07_29-pcef-comm-mtg-minutes.txt  2022-05-26_2022-05-26_PCEF_Comm_Presentation.txt  2022-05-26_2022-05-26_PCEF_Committee_Mtg_Minutes.txt  2022-06-30_2022-06-30_PCEF_Committee_Meeting_Minutes.txt  2022-08-04_2022-08-04_PCEF_Committee_Meeting_Minutes.txt  2022-08-04_2022-08-04_PCEF_Committee_Presentation.txt  2022-12-15_2022_12_15.txt  2023-06-02_2023_06_02-pcef-grants-committee-meeting-summary-approved.txt  2025-10-22_2025_10_22_PCEF_Minutes.txt  (+11 more)
r/: common_theme.R  plot_keyword_lag.R  plot_keyword_map.R  plot_similarity.R  plot_trends.R  plot_wordcloud.R
src/news_kw/: __init__.py  cli.py  config.py  cooccurrence.py  filter_files.py  io.py  keyword_lag.py  keywords.py  pipeline.py  preprocess.py  sample_data.py  similarity.py  timeseries.py  viz.py
(+272 files in other folders)
